<resources>
    <string name="app_name">ProbleMathics</string>

    //Menu
    <string name="OpMenSalir">Sortir</string>
    <string name="OpMenu2">Dificultat</string>
    <string name="OpMenu1">Dades Usuari</string>

    //Pantalla Login
    <string name="nomActMain">Nom</string>
    <string name="ContraMain">Contrasenya</string>
    <string name="iniciar_sessio">Iniciar Sessio</string>
    <string name="btnMainRegist">Registrarse</string>


    //Pantalla Nivel de Dificultad
    <string name="nivDifInter">Intermedi</string>
    <string name="nivDifFacil">Facil</string>
    <string name="nivDifDificil">Dificil</string>

    //Botones Comunes Preguntas
    <string name="BtnOpcionA">Opcio A</string>
    <string name="BtnOpcionB">Opcio B</string>
    <string name="BtnOpcionC">Opcio C</string>
    <string name="BtnOpcionD">Opcio D</string>

    //Pantalla escoger UF
    <string name="titEscUF">Escolleix la UF que vulguis practicar</string>
    <string name="btn1EscUF">UF 1</string>
    <string name="btn2EscUF">UF 2</string>
    <string name="btn3EscUF">UF 3</string>
    <string name="btn4EscUF">UF 4</string>
    <string name="btn5EscUF">UF 5</string>
    <string name="btn6EscUF">UF 6</string>

    <string name="Jungla">Jungla</string>
    <string name="BtnJugarNivDif">Jugar</string>


    //Datos Usuario
    <string name="PerfilUsuari">Usuari:</string>
    <string name="PerfilEmail">Email:</string>
    <string name="PerfilPuntuacioSingle">Puntuació SinglePlayer:</string>
    <string name="PerfilElo">Elo Multijugador:</string>
    <string name="PerfilGuanyades">Partides Guanyades:</string>
    <string name="PerfilPerdudes">Partides Perdudes:</string>

    //Desplegable Fin Juego

    <string name="VidasAcabadas">T´has quedat sense vides. Vols tornar al menú principal?</string>
    <string name="titFinJuego">¡Joc terminat!</string>
    <string name="RespuestaFinJuego">Sí</string>
    <string name="vidas">\Vidas:</string>

    //Registro de Usuarios
    <string name="nameRegist">Nom</string>
    <string name="correuRegis">Correu</string>
    <string name="RegisContra1">Contrasenya</string>
    <string name="RegisContra2">Repeteix la contrasenya</string>
    <string name="btnRegistrarse">Registrarse</string>

    //Titulos
    <string name="dades_usuari">Dades Usuari</string>
    <string name="ranquing">Ranquing</string>


</resources>