<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.droidcafeinput.MainActivity">
    <item
        android:id="@+id/OpMenu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="104"
        android:title="@string/OpMenu1" />
    <item
        android:id="@+id/OpMenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="104"
        android:title="@string/OpMenu2" />
    <item
        android:id="@+id/OpMenuSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="104"
        android:title="@string/OpMenSalir" />
</menu>