<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5FAAB1"
    tools:context=".NivDificultad">

    <Button
        android:id="@+id/btnIntermedi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="159dp"
        android:text="@string/nivDifInter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacil" />

    <Button
        android:id="@+id/btnFacil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="159dp"
        android:text="@string/nivDifFacil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDificil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="161dp"
        android:text="@string/nivDifDificil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIntermedi" />

    <Button
        android:id="@+id/Jungla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jungla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDificil"
        app:layout_constraintVertical_bias="0.257" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnFacil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonFacil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Facil" />

        <RadioButton
            android:id="@+id/radioButtonIntermedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Intermedi" />

        <RadioButton
            android:id="@+id/radioButtonDificil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dificil" />
    </RadioGroup>

    <Button
        android:id="@+id/Jugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jugar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>